--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Ross Gottschalk</h1>
                 <hr>
-                <p>"I'm not a big inspirational quote guy." - <i>Ross Gottschalk</i></p>
+                <p>Jr. Software Developer and Data Analyst</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
